# eagle-acquisition-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  command-registry.json  plugin.json  pyproject.toml
.github/workflows/: ci.yml
agents/policy/: agent.md
agents/supervisor/: agent.md
data/kb-inventory/: document-summaries.csv
data/template-metadata/: _index.json
runtime/strands/: README.md  __init__.py  agent_factory.py  example.py  playground.html  plugin_loader.py  requirements.txt  services.py  tool_definitions.py
runtime/strands/backends/: __init__.py  admin.py  aws_ops.py  diagnostics.py  documents.py  intake.py  knowledge.py  packages.py  web.py
skills/acquisition-glossary/: SKILL.md
skills/clause-selector/: SKILL.md
skills/compliance-matrix/: SKILL.md
skills/contract-vehicles/: SKILL.md
skills/cost-analysis/: SKILL.md
skills/document-history/: SKILL.md
skills/edit-document/: SKILL.md
skills/eval-criteria/: SKILL.md
skills/far-reference/: SKILL.md
skills/html-report/: SKILL.md
skills/oa-intake/: SKILL.md
skills/package-finalizer/: SKILL.md
skills/package-manager/: SKILL.md
skills/risk-assessment/: SKILL.md
skills/skill-discovery/: SKILL.md
skills/small-business-analysis/: SKILL.md
skills/solicitation-builder/: SKILL.md
skills/web-research/: SKILL.md
tests/: test_plugin_discovery.py  test_service_registry.py  test_tool_definitions.py
